--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ gradlew.bat
 gradle/
 build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
+!**/src/main/**/build/в
 !**/src/test/**/build/
 
 ### STS ###
