--- a/docker/services/app/Dockerfile.development
+++ b/docker/services/app/Dockerfile.development
@@ -1,4 +1,4 @@
-FROM bellsoft/liberica-openjdk-alpine-musl:11.0.3
+FROM openjdk:11.0.10-jdk-oracle
 WORKDIR /usr/local/app
 COPY investing-sandbox-0.0.3-SNAPSHOT.jar app.jar
 CMD java -Dfile.encoding=windows-1251 -jar ./app.jar
