--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: services/db
       dockerfile: Dockerfile.development
     ports:
-      - "5300:5432"
+      - 5300:5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=invest_sandbox
@@ -25,6 +25,16 @@ services:
       - 8091:8091
     depends_on:
       - db
+
+  nginx:
+    image: nginx:1.19.10-alpine
+    container_name: nginx
+    volumes:
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
+    ports:
+      - 8989:8989
 
 volumes:
   db-data:
