--- a/frontend/Dockerfile.development
+++ b/frontend/Dockerfile.development
@@ -1,15 +1,11 @@
-FROM node:10
+FROM node:14
 
-RUN mkdir -p /app
+WORKDIR /usr/local/app/frontend
 
-WORKDIR /app
+COPY package*.json ./
 
-COPY package*.json /app/
+RUN npm install -g @angular/cli @angular-devkit/build-angular && npm install
 
-RUN npm install
-
-COPY . /app/
-
-EXPOSE 4200
+EXPOSE 4201
 
 CMD ["npm", "start"]
